[package]
name = "pals-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = { version = "~2.1.1" }
solana-sdk = { version = "~2.1.1", default-features = false }
solana-streamer = { version = "~2.1.1" }
solana-rpc-client-api = { version = "~2.1.1", default-features = false }

rustls = { version = "0.23.15", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = "1.40.0"
axum = { version = "0.8.1", features = ["macros", "tower-log"] }
quinn = "0.11.6"
tokio-util = "0.7.14"
futures = "0.3.31"
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"
thiserror = "1.0.69"
anyhow = "1.0.97"